overflow fix

--- a/style.less
+++ b/style.less
@@ -41,7 +41,11 @@
 
 
 .pl-area.section-flipper {
+	overflow:hidden;
 	.flipper-heading-wrap{
+		/*  */
+		
+	
 		margin: 0 10px;
 		position: relative;
 	}
